# desktop-toolkit

./: .gitattributes  .gitignore  .markdownlint.jsonc  .markdownlintignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: template-release.instructions.md
.github/prompts/: release-bump.prompt.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  publish.yml  release-tauri-sidecar-app.yml.template  tauri-release.yml
build-scripts/: generate-icons.mjs  generate-latest-json.mjs  publish-to-drive.ps1
crates/desktop-toolkit/: Cargo.toml
crates/desktop-toolkit-updater/: Cargo.toml
crates/desktop-toolkit-updater/src/: main.rs
crates/desktop-toolkit/src/: lib.rs  log.rs  sidecar.rs  splash.rs  updater.rs
docs/: CONSUMING.md  V1.1.0_PLAN.md
installer/nsis/: hooks.nsh
python/: pyproject.toml
python/chamber19_desktop_toolkit/: __init__.py
python/chamber19_desktop_toolkit/pyinstaller/: sidecar.spec.template
python/chamber19_desktop_toolkit/utils/: __init__.py  email_sender.py  pdf_merge.py
python/kc_framework/: __init__.py
python/kc_framework.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/kc_framework/utils/: __init__.py
tauri-template/: README.md  splash.html  updater.html
tauri-template/src/: main.jsx.template
tauri-template/src-tauri-base/: Cargo.toml.template  tauri.conf.json.template
tauri-template/src-tauri-base/src/: lib.rs  sidecar.rs  splash.rs  updater.rs
