[project]
name = "chamber19-desktop-toolkit"
version = "1.1.0"
description = "Shared Python utilities for ROOT3POWER desktop tools"
requires-python = ">=3.10"
authors = [{ name = "Koraji" }]
license = { text = "MIT" }
dependencies = [
    "pypdf>=4,<5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["chamber19_desktop_toolkit*"]
