[project]
name = "chamber19-desktop-toolkit"
version = "2.2.6"
description = "Shared Python utilities for chamber-19 desktop tools"
requires-python = ">=3.10"
authors = [{ name = "Koraji" }]
license = { text = "MIT" }
dependencies = [
    "pypdf>=6.10.2,<7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["chamber19_desktop_toolkit*"]
