[package]
name = "desktop-toolkit-updater"
version = "2.2.7"
description = "desktop-toolkit updater shim — separate process that handles silent-install upgrades"
authors = ["Koraji"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
repository = "https://github.com/chamber-19/desktop-toolkit"
publish = false

[[bin]]
name = "desktop-toolkit-updater"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }